--- a/app/src/main/res/layout/activity_create_robot.xml
+++ b/app/src/main/res/layout/activity_create_robot.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         app:title="Crear nuevo Transformer"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:navigationIcon="@drawable/arrow_back_24px"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/transformer_name"
@@ -37,7 +38,7 @@
         android:layout_height="wrap_content"
         android:hint="Modo alterno"
         android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/create_robot_fav"
+        app:layout_constraintTop_toBottomOf="@+id/transformer_name"
         app:layout_constraintStart_toStartOf="parent">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/altMode_Input"
