--- a/app/src/main/res/layout/fragment_create_robot.xml
+++ b/app/src/main/res/layout/fragment_create_robot.xml
@@ -8,8 +8,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/create_robot"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         tools:listitem="@layout/activity_create_robot" />
 
 </FrameLayout>
