--- a/app/src/main/res/layout/fragment_faction.xml
+++ b/app/src/main/res/layout/fragment_faction.xml
@@ -7,11 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.faction.FactionFragment">
 
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="FactionFragment"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/faction_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/faction_list_content"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
