--- a/app/src/main/res/layout/transformers_list_content.xml
+++ b/app/src/main/res/layout/transformers_list_content.xml
@@ -22,7 +22,7 @@
             style="@style/TextAppearance.Material3.HeadlineMedium"/>
 
         <TextView
-            android:id="@+id/faction"
+            android:id="@+id/gender"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/TextAppearance.Material3.HeadlineMedium"/>
