--- a/app/src/main/res/layout/fragment_create_robot.xml
+++ b/app/src/main/res/layout/fragment_create_robot.xml
@@ -4,12 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.create_transformer.CreateRobotFragment">
+    tools:context=".ui.create_transformer.CreateRobotFragment"
+    android:padding="8dp">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <!--androidx.recyclerview.widget.RecyclerView
         android:id="@+id/create_robot"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/activity_create_robot" />
+        tools:listitem="@layout/activity_create_robot" /-->
+
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/create_robot_fav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:title="Crear nuevo Transformer"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:navigationIcon="@drawable/arrow_back_24px"/>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/transformer_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Nombre"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/create_robot_fav"
+        app:layout_constraintStart_toStartOf="parent">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/name_Input"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="text"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/transformer_altMode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Modo alterno"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/transformer_name"
+        app:layout_constraintStart_toStartOf="parent">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/altMode_Input"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="text"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/save_transformer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/transformer_altMode"
+        android:text="Añadir Transformer"/>
 
 </FrameLayout>
