--- a/app/src/main/res/layout/fragment_create_robot.xml
+++ b/app/src/main/res/layout/fragment_create_robot.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:hint="Nombre"
         android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/create_robot_fav"
+        app:layout_constraintTop_toBottomOf="@id/create_robot_fav"
         app:layout_constraintStart_toStartOf="parent">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/name_Input"
@@ -44,13 +44,28 @@
         android:layout_height="wrap_content"
         android:hint="Modo alterno"
         android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/transformer_name"
+        app:layout_constraintTop_toBottomOf="@id/transformer_name"
         app:layout_constraintStart_toStartOf="parent">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/altMode_Input"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="text"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/gender_selection"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Género"
+        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
+        app:layout_constraintTop_toBottomOf="@id/transformer_altMode"
+        app:layout_constraintStart_toStartOf="parent">
+        <AutoCompleteTextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="none"
+            app:simpleItems="@array/gender"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
