--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Nombre"
+        app:errorEnabled="true"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintStart_toStartOf="parent">
@@ -36,6 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Apellidos"
+        app:errorEnabled="true"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toBottomOf="@id/name"
         app:layout_constraintStart_toStartOf="@id/name">
@@ -52,6 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
+        app:errorEnabled="true"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toBottomOf="@id/surname"
         app:layout_constraintStart_toStartOf="@id/surname">
@@ -67,11 +70,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Contraseña"
+        app:errorEnabled="true"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toBottomOf="@id/email"
         app:layout_constraintStart_toStartOf="@id/email">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password_input"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="text"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/confirm_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Confirmar Contraseña"
+        app:errorEnabled="true"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toBottomOf="@id/password"
+        app:layout_constraintStart_toStartOf="@id/password">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/confirm_password_input"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="text"/>
@@ -83,10 +103,8 @@
         android:layout_height="wrap_content"
         style="@style/Widget.Material3.Button.TextButton"
         android:text="Ya tienes cuenta? Inicia sesión"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@id/confirm_password"
+        app:layout_constraintTop_toBottomOf="@id/confirm_password" />
 
     <Button
         android:id="@+id/register_button"
