--- a/app/src/main/res/navigation/authentication.xml
+++ b/app/src/main/res/navigation/authentication.xml
@@ -5,13 +5,13 @@
     android:id="@+id/authentication"
     app:startDestination="@id/loginFragment">
 
-    <!--fragment
+    <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.final_application_2024.ui.login.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
-            android:id="@+id/action_loginFragment2_to_registerFragment2"
+            android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
     </fragment>
     <fragment
@@ -20,7 +20,7 @@
         android:label="fragment_register"
         tools:layout="@layout/fragment_register" >
         <action
-            android:id="@+id/action_registerFragment2_to_loginFragment2"
+            android:id="@+id/action_registerFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
-    </fragment-->
+    </fragment>
 </navigation>
