Putting_the_text_in_the_center

--- a/app/src/main/res/layout/faction_list_content.xml
+++ b/app/src/main/res/layout/faction_list_content.xml
@@ -14,6 +14,7 @@
             android:id="@+id/faction_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             style="@style/TextAppearance.Material3.HeadlineMedium"/>
 
     </LinearLayout>
