--- a/app/src/main/res/layout/transformers_list_content.xml
+++ b/app/src/main/res/layout/transformers_list_content.xml
@@ -2,17 +2,19 @@
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:padding="16dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/transformer_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             style="@style/TextAppearance.Material3.HeadlineMedium"/>
 
         <TextView
