--- a/app/src/main/res/layout/fragment_faction.xml
+++ b/app/src/main/res/layout/fragment_faction.xml
@@ -22,7 +22,8 @@
         android:id="@+id/create_faction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginBottom="96dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/add_24px"/>
