--- a/app/src/main/res/layout/fragment_create_robot.xml
+++ b/app/src/main/res/layout/fragment_create_robot.xml
@@ -72,6 +72,7 @@
         android:id="@+id/save_transformer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="96dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/transformer_altMode"
         android:text="Añadir Transformer"/>
