--- a/app/src/main/res/layout/fragment_faction_edit.xml
+++ b/app/src/main/res/layout/fragment_faction_edit.xml
@@ -3,18 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/create_faction"
+    android:id="@+id/edit_faction"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.faction.CreateFactionFragment">
-
-    <!--TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" /-->
+    tools:context=".ui.faction.FactionEditFragment">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/create_faction_fav"
+        android:id="@+id/edit_faction_fav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
-            app:title="Crear nueva facción"
+            app:title="Editar facción"
             app:navigationIcon="@drawable/arrow_back_24px"/>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -34,9 +29,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Nombre"
-        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/create_faction_fav"
+        app:layout_constraintTop_toBottomOf="@+id/edit_faction_fav"
         app:layout_constraintStart_toStartOf="parent">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/name_Input"
@@ -46,7 +40,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/save_faction"
+        android:id="@+id/update_faction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
