--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:title="Registro"
+        app:titleCentered="true"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -113,14 +114,15 @@
         android:layout_height="wrap_content"
         style="@style/Widget.Material3.Button.TextButton"
         android:text="Ya tienes cuenta? Inicia sesión"
-        app:layout_constraintStart_toStartOf="@id/confirm_password"
-        app:layout_constraintTop_toBottomOf="@id/confirm_password" />
+        app:layout_constraintStart_toStartOf="@id/register_button"
+        app:layout_constraintTop_toBottomOf="@id/register_button" />
 
     <Button
         android:id="@+id/register_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/confirm_password"
         android:text="Registrate"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
