--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,12 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/main_navigation_host"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="760dp"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_marginBottom="?actionBarSize"
         app:navGraph="@navigation/main"
-        app:defaultNavHost="true"/>
+        app:defaultNavHost="true"
+        tools:ignore="MissingConstraints" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/main_bottom_nav"
